🔨 Fixed main.yml deploy wrong port

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
         server: ${{ secrets.DEPLOY_HOST }}
         username: ${{ secrets.DEPLOY_USER }}
         password: ${{ secrets.DEPLOY_PASS }}
+        port: 22
         local-dir: ./dist/
         server-dir: ./
         dangerous-clean-slate: true
