✨ Added Angular tests to deploy steps

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Install NPM Modules
       run: npm install
 
+    - name: Run Angular tests
+      run: npm run test
+
     - name: Build Project
       run: npm run build
     
