--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
         username: ${{ secrets.DEPLOY_USER }}
         password: ${{ secrets.DEPLOY_PASS }}
         port: 22
+        METHOD: sftp
         local-dir: ./dist/
         server-dir: ./
         dangerous-clean-slate: true
