--- a/package.json
+++ b/package.json
@@ -15,16 +15,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.13",
-    "@angular/common": "~11.2.13",
-    "@angular/compiler": "~11.2.13",
-    "@angular/core": "~11.2.13",
-    "@angular/forms": "~11.2.13",
-    "@angular/platform-browser": "~11.2.13",
-    "@angular/platform-browser-dynamic": "~11.2.13",
-    "@angular/router": "~11.2.13",
-    "@angular/service-worker": "^12.2.4",
-    "@duckdoc/termynal": "^1.0.0",
+    "@angular/animations": "^11.2.13",
+    "@angular/common": "^11.2.13",
+    "@angular/compiler": "^11.2.13",
+    "@angular/core": "^11.2.13",
+    "@angular/forms": "^11.2.13",
+    "@angular/platform-browser": "^11.2.13",
+    "@angular/platform-browser-dynamic": "^11.2.13",
+    "@angular/router": "^11.2.13",
+    "@angular/service-worker": "~12.2.4",
     "env-cmd": "^10.1.0",
     "rxjs": "~6.6.0",
     "sftp-upload": "^1.0.3",
