--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,19 +12,17 @@ jobs:
     - name: Get latest code
       uses: actions/checkout@v2.3.2
 
-    - name: Use Node.js 16 LTS
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'
+    - name: Use yarn
+      uses: borales/actions-yarn@v2.3.0
       
     - name: Install NPM Modules
-      run: npm install
+      run: yarn install
 
     - name: Build Project
-      run: npm run build:prod
+      run: yarn build:prod
 
     - name: Deploy Project
-      run: npm run deploy:prod
+      run: yarn deploy:prod
       env:
           DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
           DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
