--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,13 +14,11 @@ jobs:
     - name: Get latest code
       uses: actions/checkout@v2.3.2
 
-    - name: Use Node.js 16 LTS
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'
+    - name: Use yarn
+      uses: borales/actions-yarn@v2.3.0
       
     - name: Install NPM Modules
-      run: npm install
+      run: yarn install
 
     - name: Run Angular tests
-      run: npm run test:prod
+      run: yarn test:prod
