🎉 Created social icons list, all icons using feather-icons and some theming improvements

--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -5,7 +5,7 @@
         "featured_image": null,
         "description": "",
         "tags": [
-            "", "Electron", "Genius API"
+            "Electron", "Genius API", "React (Web)"
         ]
     }
 ]
