--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,10 @@ jobs:
     - name: Get latest code
       uses: actions/checkout@v2.3.2
 
-    - name: Use yarn
-      uses: borales/actions-yarn@v2.3.0
+    - name: Use Node.js 16 LTS
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
       
     - name: Install NPM Modules
       run: yarn install
