--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@angular/platform-browser": "^11.2.13",
     "@angular/platform-browser-dynamic": "^11.2.13",
     "@angular/router": "^11.2.13",
-    "@angular/service-worker": "~12.2.4",
+    "@angular/service-worker": "^11.2.3",
+    "angular-feather": "^6.1.0",
     "env-cmd": "^10.1.0",
     "rxjs": "~6.6.0",
     "sftp-upload": "^1.0.3",
@@ -32,10 +33,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.12",
-    "@angular/cli": "~11.2.12",
-    "@angular/compiler-cli": "~11.2.13",
+    "@angular/cli": "^11.2.12",
+    "@angular/compiler-cli": "^11.2.13",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "~15.0.2",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~5.0.0",
