--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "build:prod": "ng build --prod",
+    "build:prod": "ng build --prod --aot",
     "test:prod": "ng test --browsers=ChromeHeadless --watch=false --code-coverage",
     "deploy": "env-cmd node deploy.js",
     "deploy:prod": "node deploy.js",
