--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Build Project
       run: yarn build:prod
 
+    - name: Gzip dist folder
+      run: yarn gzip
+
     - name: Deploy Project
       run: yarn deploy:prod
       env:
