--- a/angular.json
+++ b/angular.json
@@ -69,7 +69,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "portfolio:build"
+            "browserTarget": "portfolio:build",
+            "sourceMap": true
           },
           "configurations": {
             "production": {
