--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "deploy": "env-cmd node deploy.js",
     "deploy:prod": "node deploy.js",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "gzip": "rm -rf ./dist/*-gzip && gzipper c --verbose --output-file-format [filename].[ext] ./dist/portfolio ./dist/portfolio-gzip"
   },
   "private": true,
   "dependencies": {
@@ -20,11 +21,10 @@
     "@angular/core": "^11.2.13",
     "@angular/platform-browser": "^11.2.13",
     "@angular/platform-browser-dynamic": "^11.2.13",
-    "@angular/router": "^11.2.13",
     "@angular/service-worker": "^11.2.3",
     "angular-feather": "^6.1.0",
     "env-cmd": "^10.1.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.5.1",
     "sftp-upload": "^1.0.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -36,6 +36,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "~15.0.2",
     "codelyzer": "^6.0.0",
+    "gzipper": "^6.2.1",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
