✨ Revert gzip and fixed duplicated fonts

--- a/angular.json
+++ b/angular.json
@@ -69,8 +69,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "portfolio:build",
-            "sourceMap": true
+            "browserTarget": "portfolio:build"
           },
           "configurations": {
             "production": {
