--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/service-worker": "^11.2.3",
     "angular-feather": "^6.1.0",
     "env-cmd": "^10.1.0",
+    "fathom-client": "^3.2.0",
     "rxjs": "^7.5.1",
     "sftp-upload": "^1.0.3",
     "tslib": "^2.0.0",
