✨ Changes around project erndering

--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -2,7 +2,7 @@
     {
         "slug": "spotifyrics",
         "name": "Spotifyrics",
-        "featured_image": null,
+        "featured_image": "spotifyrics-k32.png",
         "description": "",
         "tags": [
             "Electron", "Genius API", "React (Web)"
