🛠 Huge improvement on entire website, including new blog using markdown

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,9 @@ Thumbs.db
 # SW servable files for localhost
 src/ngsw-worker.js
 src/ngsw.json
+
+# Local testing data
+src/assets/data
+
+# Lockfiles
+yarn.lock
