--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@angular/core": "^11.2.13",
     "@angular/platform-browser": "^11.2.13",
     "@angular/platform-browser-dynamic": "^11.2.13",
+    "@angular/router": "^11.2.13",
     "@angular/service-worker": "^11.2.3",
-    "angular-feather": "^6.1.0",
+    "@supabase/supabase-js": "^1.35.1",
+    "angular-feather": "6.1.0",
     "env-cmd": "^10.1.0",
     "fathom-client": "^3.2.0",
-    "rxjs": "^7.5.1",
+    "ngx-markdown": "~11.1.0",
+    "prism-themes": "^1.9.0",
     "sftp-upload": "^1.0.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -40,7 +43,7 @@
     "gzipper": "^6.2.1",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
+    "karma": "^6.3.19",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
