--- a/package.json
+++ b/package.json
@@ -21,13 +21,11 @@
     "@angular/platform-browser": "^11.2.13",
     "@angular/platform-browser-dynamic": "^11.2.13",
     "@angular/router": "^11.2.13",
-    "@angular/service-worker": "^11.2.3",
     "@supabase/supabase-js": "^1.35.1",
     "angular-feather": "6.1.0",
     "fathom-client": "^3.2.0",
     "ngx-markdown": "~11.1.0",
     "prism-themes": "^1.9.0",
-    "sftp-upload": "^1.0.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -49,6 +47,7 @@
     "karma-jasmine-html-reporter": "^1.6.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "sftp-upload": "^1.0.3"
   }
 }
