--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "test": "ng test",
     "test:prod": "ng test --browsers=ChromeHeadless --watch=false --code-coverage",
-    "env-config": "ts-node -O '{\"module\": \"commonjs\"}' ./config.index.ts",
+    "env-config": "ts-node -O '{\"module\": \"commonjs\"}' ./env.config.ts",
     "build": "ng build",
     "build:prod": "npm run env-config && ng build --prod --aot",
     "deploy": "env-cmd node deploy.js",
