--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0",
     "@angular-devkit/build-angular": "~0.1102.12",
     "@angular/cli": "^11.2.12",
     "@angular/compiler-cli": "^11.2.13",
     "@types/jasmine": "~3.6.0",
     "@types/node": "~15.0.2",
     "codelyzer": "^6.0.0",
+    "env-cmd": "^10.1.0",
     "gzipper": "^6.2.1",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~5.0.0",
@@ -46,9 +46,9 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.6.0",
+    "sftp-upload": "^1.0.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5",
-    "sftp-upload": "^1.0.3"
+    "typescript": "~4.1.5"
   }
 }
