--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,26 +9,26 @@ jobs:
     environment: prod
 
     steps:
-    - name: Get latest code
-      uses: actions/checkout@v2.3.2
+      - name: Get latest code
+        uses: actions/checkout@v2.3.2
 
-    - name: Use Node.js 16 LTS
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'
-      
-    - name: Install NPM Modules
-      run: yarn install
+      - name: Use Node.js 16 LTS
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16"
 
-    - name: Build project
-      run: yarn build:prod
-      env:
-        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-        SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+      - name: Install NPM Modules
+        run: yarn install
 
-    - name: Deploy Project
-      run: yarn deploy:prod
-      env:
-        DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
-        DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
-        DEPLOY_PASS: ${{ secrets.DEPLOY_PASS }}
+      - name: Build project
+        run: yarn build:prod
+        # env:
+        # SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        # SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+
+      - name: Deploy Project
+        run: yarn deploy:prod
+        env:
+          DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
+          DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+          DEPLOY_PASS: ${{ secrets.DEPLOY_PASS }}
