--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,9 @@
               "node_modules/marked/marked.min.js",
               "node_modules/prismjs/prism.js",
               "node_modules/emoji-toolkit/lib/js/joypixels.min.js",
+              "node_modules/prismjs/components/prism-python.min.js",
               "node_modules/prismjs/components/prism-javascript.min.js",
+              "node_modules/prismjs/components/prism-typescript.min.js",
               "node_modules/prismjs/components/prism-cshtml.min.js"
             ],
             "serviceWorker": false
