--- a/package.json
+++ b/package.json
@@ -12,18 +12,25 @@
     "deploy": "env-cmd node deploy.js",
     "deploy:prod": "node deploy.js",
     "lint": "ng lint",
-    "gzip": "rm -rf ./dist/*-gzip && gzipper c --verbose --output-file-format [filename].[ext] ./dist/portfolio ./dist/portfolio-gzip"
+    "gzip": "rm -rf ./dist/*-gzip && gzipper c --verbose --output-file-format [filename].[ext] ./dist/portfolio ./dist/portfolio-gzip",
+    "dev:ssr": "ng run portfolio:serve-ssr",
+    "serve:ssr": "node dist/portfolio/server/main.js",
+    "build:ssr": "ng build --prod && ng run portfolio:server:production",
+    "prerender": "ng run portfolio:prerender"
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^11.2.13",
     "@angular/common": "^11.2.13",
     "@angular/compiler": "^11.2.13",
     "@angular/core": "^11.2.13",
     "@angular/platform-browser": "^11.2.13",
     "@angular/platform-browser-dynamic": "^11.2.13",
+    "@angular/platform-server": "^11.2.13",
     "@angular/router": "^11.2.13",
+    "@nguniversal/express-engine": "11.2.1",
     "angular-feather": "6.1.0",
-    "faunadb": "^4.6.0",
+    "express": "^4.15.2",
     "ngx-markdown": "~11.1.0",
     "prism-themes": "^1.9.0",
     "tslib": "^2.0.0",
@@ -33,6 +40,8 @@
     "@angular-devkit/build-angular": "~0.1102.12",
     "@angular/cli": "^11.2.12",
     "@angular/compiler-cli": "^11.2.13",
+    "@nguniversal/builders": "^11.2.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "~15.0.2",
     "codelyzer": "^6.0.0",
