--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nguniversal/express-engine": "11.2.1",
     "angular-feather": "6.1.0",
     "express": "^4.15.2",
+    "localstorage-polyfill": "^1.0.1",
     "ngx-markdown": "~11.1.0",
     "prism-themes": "^1.9.0",
     "tslib": "^2.0.0",
