--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "ng test",
     "test:prod": "ng test --browsers=ChromeHeadless --watch=false --code-coverage",
     "env-config": "ts-node -O '{\"module\": \"commonjs\"}' ./env.config.ts",
-    "build": "ng build",
-    "build:prod": "npm run env-config && ng build --prod --aot",
+    "build:browser": "ng build",
+    "build:browser:prod": "npm run env-config && ng build --prod --aot",
     "deploy": "env-cmd node deploy.js",
     "deploy:prod": "node deploy.js",
     "lint": "ng lint",
@@ -16,7 +16,8 @@
     "dev:ssr": "ng run portfolio:serve-ssr",
     "serve:ssr": "node dist/portfolio/server/main.js",
     "build:ssr": "ng build --prod && ng run portfolio:server:production",
-    "prerender": "ng run portfolio:prerender"
+    "prerender": "ng run portfolio:prerender",
+    "vercel-build": "npm run build:ssr"
   },
   "private": true,
   "dependencies": {
