--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -19,7 +19,7 @@
                 "icon": "external-link"
             }
         ],
-        "image_url": "https://cdn.dsgdsr.me/images/projects/fastchat.jpg",
+        "image_name": "fastchat.jpeg",
         "url": "https://fastchat.dsgdsr.me"
     },
     {
@@ -44,7 +44,7 @@
                 "icon": "external-link"
             }
         ],
-        "image_url": "https://cdn.dsgdsr.me/images/projects/spotifyrics.png",
+        "image_name": "spotifyrics.png",
         "url": "https://spotifyrics.dsgdsr.me/"
     },
     {
@@ -63,7 +63,7 @@
                 "icon": "external-link"
             }
         ],
-        "image_url": "https://cdn.dsgdsr.me/images/projects/pykedex.jpg",
+        "image_name": "pykedex.jpeg",
         "url": "https://pykedex.dsgdsr.me"
     }
 ]
