--- a/package.json
+++ b/package.json
@@ -8,27 +8,27 @@
     "test:prod": "ng test --browsers=ChromeHeadless --watch=false --code-coverage",
     "env-config": "ts-node -O '{\"module\": \"commonjs\"}' ./env.config.ts",
     "build:browser": "ng build",
-    "build:browser:prod": "npm run env-config && ng build --prod --aot",
+    "build:browser:prod": "npm run env-config && ng build --configuration production --aot",
     "deploy": "env-cmd node deploy.js",
     "deploy:prod": "node deploy.js",
     "lint": "ng lint",
     "gzip": "rm -rf ./dist/*-gzip && gzipper c --verbose --output-file-format [filename].[ext] ./dist/portfolio ./dist/portfolio-gzip",
     "dev:ssr": "ng run portfolio:serve-ssr",
     "serve:ssr": "node dist/portfolio/server/main.js",
-    "build:ssr": "ng build --prod && ng run portfolio:server:production",
+    "build:ssr": "ng build --configuration production && ng run portfolio:server:production",
     "prerender": "ng run portfolio:prerender",
     "vercel-build": "npm run build:ssr"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.13",
-    "@angular/common": "^11.2.13",
-    "@angular/compiler": "^11.2.13",
-    "@angular/core": "^11.2.13",
-    "@angular/platform-browser": "^11.2.13",
-    "@angular/platform-browser-dynamic": "^11.2.13",
-    "@angular/platform-server": "^11.2.13",
-    "@angular/router": "^11.2.13",
+    "@angular/animations": "^12.2.17",
+    "@angular/common": "^12.2.17",
+    "@angular/compiler": "^12.2.17",
+    "@angular/core": "^12.2.17",
+    "@angular/platform-browser": "^12.2.17",
+    "@angular/platform-browser-dynamic": "^12.2.17",
+    "@angular/platform-server": "^12.2.17",
+    "@angular/router": "^12.2.17",
     "@nguniversal/express-engine": "11.2.1",
     "angular-feather": "6.1.0",
     "express": "^4.15.2",
@@ -36,12 +36,12 @@
     "ngx-markdown": "~11.1.0",
     "prism-themes": "^1.9.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.12",
-    "@angular/cli": "^11.2.12",
-    "@angular/compiler-cli": "^11.2.13",
+    "@angular-devkit/build-angular": "~12.2.18",
+    "@angular/cli": "^12.2.18",
+    "@angular/compiler-cli": "^12.2.17",
     "@nguniversal/builders": "^11.2.1",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
@@ -59,6 +59,6 @@
     "sftp-upload": "^1.0.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.3.5"
   }
 }
