--- a/angular.json
+++ b/angular.json
@@ -168,5 +168,8 @@
       }
     }
   },
-  "defaultProject": "portfolio"
+  "defaultProject": "portfolio",
+  "cli": {
+    "analytics": false
+  }
 }
