--- a/package.json
+++ b/package.json
@@ -22,44 +22,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.3.0",
-    "@angular/common": "^14.3.0",
-    "@angular/compiler": "^14.3.0",
-    "@angular/core": "^14.3.0",
-    "@angular/platform-browser": "^14.3.0",
-    "@angular/platform-browser-dynamic": "^14.3.0",
-    "@angular/platform-server": "^14.3.0",
-    "@angular/router": "^14.3.0",
-    "@nguniversal/express-engine": "^14.1.0",
-    "angular-feather": "6.1.0",
-    "express": "^4.15.2",
+    "@angular/animations": "^16.0.0",
+    "@angular/common": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/platform-server": "^16.0.0",
+    "@angular/router": "^16.0.0",
+    "@nguniversal/express-engine": "^16.0.0",
+    "angular-feather": "6.5.0",
+    "express": "^4.18.2",
     "localstorage-polyfill": "^1.0.1",
-    "ngx-markdown": "~11.1.0",
+    "marked": "^5.0.0",
+    "ngx-markdown": "~15.1.2",
     "prism-themes": "^1.9.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.5.0",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.2.11",
-    "@angular/cli": "^14.2.11",
-    "@angular/compiler-cli": "^14.3.0",
-    "@nguniversal/builders": "^14.1.0",
-    "@types/express": "^4.17.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "~15.0.2",
-    "codelyzer": "^6.0.0",
+    "@angular-devkit/build-angular": "~16.0.0",
+    "@angular/cli": "^16.0.0",
+    "@angular/compiler-cli": "^16.0.0",
+    "@nguniversal/builders": "^16.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jasmine": "~4.3.1",
+    "@types/node": "^20.1.0",
+    "codelyzer": "^6.0.2",
     "env-cmd": "^10.1.0",
-    "gzipper": "^6.2.1",
-    "jasmine-core": "~3.7.1",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.3.19",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.6.0",
-    "sftp-upload": "^1.0.3",
-    "ts-node": "~8.3.0",
+    "gzipper": "^7.2.0",
+    "jasmine-core": "~4.6.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
+    "sftp-upload": "^1.0.4",
+    "ts-node": "~10.9.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.6.4"
+    "typescript": "~5.0.4"
   }
 }
