--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,18 +11,18 @@
     "moduleResolution": "node",
     "noUnusedLocals": true,
     "importHelpers": true,
-    "target": "es2015",
+    "target": "ES2022",
     "module": "es2020",
     "lib": [
       "es2018",
       "dom"
     ],
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
-    "enableIvy": true,
     "allowEmptyCodegenFiles": true
   }
 }
