--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: Deploy prod site
 
-on: workflow_dispatch
+on: 
+  push:
+    branches: 
+      - main
 
 jobs:
   web-deploy:
@@ -19,6 +22,9 @@ jobs:
 
       - name: Install NPM Modules
         run: yarn install
+
+      - name: Run Angular tests
+        run: yarn test:prod
 
       - name: Build project
         run: yarn build:prod
