--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 name: Deploy prod site
 
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+
 on: 
   push:
     branches: 
@@ -26,15 +30,18 @@ jobs:
       - name: Run Angular tests
         run: yarn test:prod
 
-      - name: Build project
-        run: yarn build:prod
-        # env:
-        # SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-        # SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+      - name: Vercel pull
+        run: yarn vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
 
-      - name: Deploy Project
-        run: yarn deploy:prod
-        env:
-          DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
-          DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
-          DEPLOY_PASS: ${{ secrets.DEPLOY_PASS }}
+      - name: Vercel build
+        run: yarn vercel build --token=${{ secrets.VERCEL_TOKEN }}
+      
+      - name: Vercel deploy
+        run: yarn vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+
+      # - name: Deploy Project
+      #   run: yarn deploy:prod
+      #   env:
+      #     DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
+      #     DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+      #     DEPLOY_PASS: ${{ secrets.DEPLOY_PASS }}
