--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,10 @@
-name: Run tests on main branch push
+name: Run tests on main branch push (NOT USED)
 
 on: workflow_dispatch
       
 jobs:
   web-deploy:
-    name: Run Angular tests (NOT USED)
+    name: Run Angular tests
     runs-on: ubuntu-latest
 
     steps:
