--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "version": 2,
   "public": true,
   "name": "test-universal",
+  "github": {
+    "enabled": false
+  },
   "rewrites": [
     {
       "source": "/(.*)",
