🛠 Fix main action not deployed to production env

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: yarn vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Vercel build
-        run: yarn vercel build --token=${{ secrets.VERCEL_TOKEN }}
+        run: yarn vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
       
       - name: Vercel deploy
-        run: yarn vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+        run: yarn vercel deploy --prod --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
