--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev:ssr": "ng run portfolio:serve-ssr",
     "dev:ssr:mac": "NODE_OPTIONS=--openssl-legacy-provider ng run portfolio:serve-ssr",
     "serve:ssr": "node dist/portfolio/server/main.js",
-    "build:ssr": "ng build --configuration production && ng run portfolio:server:production",
+    "build:ssr": "npm run env-config && ng build --configuration production && ng run portfolio:server:production",
     "prerender": "ng run portfolio:prerender",
     "vercel-build": "npm run build:ssr"
   },
@@ -30,15 +30,17 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/platform-server": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@aptabase/web": "^0.2.0",
     "@nguniversal/express-engine": "^16.0.0",
     "angular-feather": "6.5.0",
     "express": "^4.18.2",
     "localstorage-polyfill": "^1.0.1",
-    "marked": "^5.0.0",
-    "ngx-markdown": "~15.1.2",
+    "marked": "^4.3.0",
+    "ngx-markdown": "^16.0.0",
     "prism-themes": "^1.9.0",
     "tslib": "^2.5.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~16.0.0",
