✨ Big refactor and update for the whole web

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "deploy:prod": "node deploy.js",
     "lint": "ng lint",
     "gzip": "rm -rf ./dist/*-gzip && gzipper c --verbose --output-file-format [filename].[ext] ./dist/portfolio ./dist/portfolio-gzip",
-    "dev:ssr": "ng run portfolio:serve-ssr",
-    "dev:ssr:mac": "NODE_OPTIONS=--openssl-legacy-provider ng run portfolio:serve-ssr",
+    "dev:ssr": "npm run env-config && ng run portfolio:serve-ssr",
+    "dev:ssr:mac": "NODE_OPTIONS=--openssl-legacy-provider npm run dev:ssr",
     "serve:ssr": "node dist/portfolio/server/main.js",
     "build:ssr": "npm run env-config && ng build --configuration production && ng run portfolio:server:production",
     "prerender": "ng run portfolio:prerender",
@@ -30,6 +30,8 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/platform-server": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@aptabase/web": "^0.2.0",
     "@nguniversal/express-engine": "^16.0.0",
     "angular-feather": "6.5.0",
@@ -37,7 +39,8 @@
     "localstorage-polyfill": "^1.0.1",
     "marked": "^4.3.0",
     "ngx-markdown": "^16.0.0",
-    "prism-themes": "^1.9.0",
+    "dracula-prism": "^2.1.5",
+    "clipboard": "^2.0.11",
     "tslib": "^2.5.0",
     "zone.js": "~0.13.0",
     "dotenv": "^16.3.1"
