📦 Fix UT and add them back to pipelines steps

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install NPM Modules
         run: yarn install
 
+      - name: Run UT and coverage
+        run: yarn test:prod
+
       - name: Vercel pull
         run: yarn vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
