--- a/.github/workflows/automated.yml
+++ b/.github/workflows/automated.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install NPM Modules
         run: yarn install
 
+      - name: Run Angular tests
+        run: yarn test:prod
+
       - name: Vercel pull
         run: yarn vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
 
