--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -24,35 +24,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/platform-server": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/animations": "16.2.0",
+    "@angular/common": "16.2.0",
+    "@angular/compiler": "16.2.0",
+    "@angular/core": "16.2.0",
+    "@angular/forms": "16.2.0",
+    "@angular/platform-browser": "16.2.0",
+    "@angular/platform-browser-dynamic": "16.2.0",
+    "@angular/platform-server": "16.2.0",
+    "@angular/router": "16.2.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@aptabase/web": "^0.2.0",
-    "@nguniversal/express-engine": "^16.0.0",
+    "@nguniversal/express-engine": "16.2.0",
     "angular-feather": "6.5.0",
     "express": "^4.18.2",
     "localstorage-polyfill": "^1.0.1",
     "marked": "^4.3.0",
-    "ngx-markdown": "^16.0.0",
+    "ngx-markdown": "16.0.0",
     "dracula-prism": "^2.1.5",
     "clipboard": "^2.0.11",
     "tslib": "^2.5.0",
-    "zone.js": "~0.13.0",
-    "dotenv": "^16.3.1",
-    "yargs": "^17.7.2"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~16.0.0",
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
-    "@nguniversal/builders": "^16.0.0",
+    "@angular/cli": "16.2.0",
+    "@angular/compiler-cli": "16.2.0",
+    "@nguniversal/builders": "16.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.1",
     "@types/node": "^20.1.0",
@@ -70,6 +69,8 @@
     "ts-node": "~10.9.1",
     "tslint": "~6.1.0",
     "typescript": "~5.0.4",
-    "vercel": "^29.1.1"
+    "vercel": "^29.1.1",
+    "dotenv": "^16.3.1",
+    "yargs": "^17.7.2"
   }
 }
